--- a/SimpleProject/index.html
+++ b/SimpleProject/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <h1 id="head"> Welcome</h1>
+  <header><h2>Site Header</h2></header>
+
   <script src="script.js"></script>
 </body>
 </html>
