Added footer placeholder

--- a/SimpleProject/index.html
+++ b/SimpleProject/index.html
@@ -8,6 +8,8 @@
 <body>
   <h1 id="head"> Welcome</h1>
   <header><h2>Site Header</h2></header>
+  <footer><p>Footer coming soon</p></footer>
+
 
   <script src="script.js"></script>
 </body>
