Added and styled footer section

--- a/SimpleProject/index.html
+++ b/SimpleProject/index.html
@@ -9,6 +9,9 @@
   <h1 id="head"> Welcome</h1>
   <header><h2>Site Header</h2></header>
   <footer><p>Footer coming soon</p></footer>
+<footer>
+  <p>© 2025 Simple Project. All rights reserved.</p>
+</footer>
 
 
   <script src="script.js"></script>
